View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025750 | Open CASCADE | OCCT:Coding | public | 2015-01-26 11:33 | 2015-10-23 20:49 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.1 | Fixed in Version | 6.9.1 | ||
Summary | 0025750: Coding rules - eliminate GCC warning -Wunused-but-set-variable in OSD_signal.cxx for Android build | ||||
Description | It is necessary to eliminate GCC warning -Wunused-but-set-variable in file OSD_signal.cxx:OSD_signal.cxx: In function 'void Handler(int, siginfo_t*, Standard_Address)': OSD_signal.cxx:132:15: warning: variable 'aSigInfo' set but not used [-Wunused-but-set-variable] siginfo_t * aSigInfo = NULL; ^ | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
I suggest we shall investigate how signals work on Android, and modify handler accordingly |
|
Branch CR25750 has been created by ibs. SHA-1: 2083e782d5eb67f41caa78f0520f66f843e01581 Detailed log of new commits: Author: ibs Date: Wed Feb 18 14:13:08 2015 +0300 0025750: Eliminate GCC warning -Wunused-but-set-variable in OSD_signal.cxx for Android build -Wunused-but-set-variable GCC warnings removed |
|
Ivan, what is the status of this issue? |
|
Warning was eliminated in commit by ibs. Signals handler and exception handling works correctly on Android platform. I propose to change this issue status to RESOLVED. |
|
Branch CR25750_1 has been created by kgv. SHA-1: cca9cc886e7327b0464c827b8ff05009397c43b3 Detailed log of new commits: Author: ibs Date: Wed May 13 11:59:36 2015 +0300 0025750: Coding rules - eliminate GCC warning -Wunused-but-set-variable in OSD_signal.cxx for Android build Move variable aSigInfo to the proper scope. |
|
Please test the patch. |
|
Dear BugMaster, Branch CR25750_1 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: cca9cc886e7327b0464c827b8ff05009397c43b3 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 95432395 / 95504821 [-0.08%] Total CPU difference: 53298.81999999961 / 51845.16999999939 [+2.80%] products component : Total MEMORY difference: 23853431 / 23928051 [-0.31%] Total CPU difference: 17553.209999999995 / 16286.969999999976 [+7.77%] Testing on Windows: occt component : Total MEMORY difference: 59110139 / 59082925 [+0.05%] Total CPU difference: 17305.783733798755 / 17064.200585198865 [+1.42%] products component : Total MEMORY difference: 15632982 / 15636788 [-0.02%] Total CPU difference: 6544.897154199981 / 6469.236669199996 [+1.17%] There are no differences in images found by testdiff. |
|
Branch CR25750_1 has been deleted by kgv. SHA-1: cca9cc886e7327b0464c827b8ff05009397c43b3 |
|
Branch CR25750 has been deleted by kgv. SHA-1: 2083e782d5eb67f41caa78f0520f66f843e01581 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-01-26 11:33 |
|
New Issue | |
2015-01-26 11:33 |
|
Assigned To | => abv |
2015-01-26 12:40 |
|
Relationship added | related to 0025734 |
2015-02-14 20:25 |
|
Note Added: 0037544 | |
2015-02-14 20:25 |
|
Assigned To | abv => ibs |
2015-02-14 20:25 |
|
Status | new => assigned |
2015-02-14 20:55 | kgv | Target Version | => 6.9.0 |
2015-02-18 20:07 | git | Note Added: 0037682 | |
2015-03-27 21:38 |
|
Note Added: 0038963 | |
2015-05-06 06:22 |
|
Assigned To | ibs => stv |
2015-05-06 06:22 |
|
Target Version | 6.9.0 => 7.1.0 |
2015-05-06 14:17 | stv | Note Added: 0040620 | |
2015-05-06 14:18 | stv | Note Edited: 0040620 | |
2015-05-06 14:18 | stv | Note Edited: 0040620 | |
2015-05-13 11:57 | kgv | Severity | minor => trivial |
2015-05-13 11:57 | kgv | Summary | Eliminate GCC warning -Wunused-but-set-variable in OSD_signal.cxx for Android build => Coding rules - eliminate GCC warning -Wunused-but-set-variable in OSD_signal.cxx for Android build |
2015-05-13 11:57 | kgv | Description Updated | |
2015-05-13 11:57 | kgv | Steps to Reproduce Updated | |
2015-05-13 12:00 | git | Note Added: 0040843 | |
2015-05-13 12:00 | kgv | Note Added: 0040844 | |
2015-05-13 12:00 | kgv | Assigned To | stv => bugmaster |
2015-05-13 12:00 | kgv | Status | assigned => resolved |
2015-05-13 12:00 | kgv | Status | resolved => reviewed |
2015-05-13 12:07 |
|
Assigned To | bugmaster => mkv |
2015-05-14 17:24 |
|
Note Added: 0041148 | |
2015-05-14 17:24 |
|
Assigned To | mkv => bugmaster |
2015-05-14 17:24 |
|
Status | reviewed => tested |
2015-05-14 17:24 |
|
Test case number | => Not needed |
2015-05-15 15:38 | bugmaster | Changeset attached | => occt master 7d679df3 |
2015-05-15 15:38 | bugmaster | Status | tested => verified |
2015-05-15 15:38 | bugmaster | Resolution | open => fixed |
2015-05-29 14:19 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2015-07-27 13:29 | git | Note Added: 0043473 | |
2015-08-26 11:14 |
|
Target Version | 7.0.0 => 6.9.1 |
2015-10-16 14:56 |
|
Status | verified => closed |
2015-10-16 16:47 | git | Note Added: 0047034 | |
2015-10-23 20:49 |
|
Fixed in Version | => 6.9.1 |